--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <spring-boot.version>2.5.6</spring-boot.version>
     <modelmapper.version>2.4.4</modelmapper.version>
     <pdfbox.version>2.0.24</pdfbox.version>
+    <jacksondataformat.version>2.13.0</jacksondataformat.version>
   </properties>
   <dependencies>
     <dependency>
@@ -67,11 +68,20 @@
       <artifactId>modelmapper</artifactId>
       <version>${modelmapper.version}</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.pdfbox</groupId>-->
+<!--      <artifactId>pdfbox</artifactId>-->
+<!--      <version>${pdfbox.version}</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>org.apache.pdfbox</groupId>
-      <artifactId>pdfbox</artifactId>
-      <version>${pdfbox.version}</version>
-      <scope>test</scope>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>${jacksondataformat.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-kotlin</artifactId>
     </dependency>
   </dependencies>
 
