--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>fop</artifactId>
+      <version>2.7</version>
+    </dependency>
   </dependencies>
 
   <build>
