--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <modelmapper.version>2.4.4</modelmapper.version>
     <pdfbox.version>2.0.24</pdfbox.version>
     <jacksondataformat.version>2.13.0</jacksondataformat.version>
+    <xmlgraphics.version>2.7</xmlgraphics.version>
+    <zxing.version>3.4.1</zxing.version>
   </properties>
   <dependencies>
     <dependency>
@@ -80,7 +82,17 @@
     <dependency>
       <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>fop</artifactId>
-      <version>2.7</version>
+      <version>${xmlgraphics.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>${zxing.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>${zxing.version}</version>
     </dependency>
   </dependencies>
 
