Created test that prints out file and image for Git comparison

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,20 @@
       <artifactId>javase</artifactId>
       <version>${zxing.version}</version>
     </dependency>
+
+    <!-- Test -->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>${pdfbox.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox-tools</artifactId>
+      <version>${pdfbox.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
