--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
       <artifactId>javase</artifactId>
       <version>${zxing.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.microutils</groupId>
+      <artifactId>kotlin-logging</artifactId>
+      <version>1.7.9</version>
+    </dependency>
 
     <!-- Test -->
     <dependency>
