--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: jacoco-badge-generator
+    - name: JaCoCo Badge Generator
       uses: cicirello/jacoco-badge-generator@v2.6.1
 
